# SLI-Rust

./: Cargo.toml  README.md
src/: algorithms.rs  iris_data.rs  lib.rs  matrix.rs  test_sqrt.rs  vector.rs
src/autodiff/: activations.rs  linear.rs  loss.rs  mod.rs  module.rs  sequential.rs  update.rs
src/autodiff/optims/: sgd.rs
