[package]
name = "linear_algebra"
version = "0.1.0"
edition = "2021"

[dependencies]
libm = { version = "0.2.16", default-features = false }
# No dependencies for now, keeping it lean.

[features]
# By default, we use 'std' for development on MacOS.
# To compile for STM32, we will use --no-default-features.
default = ["std"]
std = []
