[package]
name = "ferrite"
version = "0.1.0"
edition = "2021"
description = "A no_std machine learning framework for microcontrollers"
keywords = ["no_std", "embedded", "machine-learning", "linear-algebra", "stm32"]
categories = ["no-std", "science", "embedded"]

[dependencies]
libm = { version = "0.2.16", default-features = false }

[features]
default = ["std"]
std = []
